# tessera

./: .editorconfig  .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS
.github/workflows/: build-and-push.yml
apps/slack-bot/: Dockerfile  pyproject.toml
apps/slack-bot/src/slack_bot/: config.py  main.py  models.py  temporal_client.py
apps/temporal-worker/: .dockerignore  Dockerfile  pyproject.toml
apps/temporal-worker/src/temporal_worker/: activities.py  agent.py  config.py  github.py  main.py  models.py  slack.py  workflows.py
helm/external-secrets/: Chart.yaml  values.yaml
helm/slack-bot/: Chart.yaml  values.yaml
helm/slack-bot/templates/: _helpers.tpl  deployment.yaml  externalsecret.yaml
helm/temporal/: Chart.yaml  external-secret.yaml  values.yaml
helm/temporal-worker/: Chart.yaml  values.yaml
helm/temporal-worker/templates/: _helpers.tpl  deployment.yaml  externalsecret.yaml
terraform/bootstrap/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/main/: backend.tf  ecr.tf  eks.tf  github-oidc.tf  iam-ebs-csi.tf  iam-eso.tf  outputs.tf  rds.tf  secret.tf  vpc.tf
terraform/main/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/main/modules/eks-cluster/: cluster.tf  iam.tf  nodegroup.tf  outputs.tf  security_groups.tf  variables.tf
terraform/main/modules/eks-iam-role/: main.tf  outputs.tf  variables.tf
terraform/main/modules/eks-oidc-provider/: main.tf  outputs.tf  variables.tf
terraform/main/modules/eks-pod-irsa/: main.tf  outputs.tf  variables.tf
(+9 files in other folders)
