[project]
name = "slack-bot"
version = "0.1.0"
description = "Slack handler that starts Temporal workflows for the coding agent"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.7.0",
    "pydantic>=2.7",
    "slack-bolt>=1.20",
    "structlog>=24.1",
    "aiohttp>=3.10",

]

[project.scripts]
slack-bot = "slack_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_bot"]