[project]
name = "temporal-worker"
version = "0.1.0"
description = "Temporal worker hosting the Pydantic AI coding agent"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.7.0",
    "pydantic-ai==1.87.0",
    "pydantic>=2.7",
    "PyGithub>=2.5",
    "slack-sdk>=3.30",
    "httpx>=0.27",
    "structlog>=24.1",
]

[project.scripts]
temporal-worker = "temporal_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/temporal_worker"]